# til

./: README.md  package-lock.json  package.json  pyproject.toml
.crosspost/: 2026-01-25-Tidy-data.json  2026-01-31-HTTP-Range-requests.json  2026-02-24-Set-difference-vs-symmetric-difference.json  2026-03-03-Fibonacci-hashing.json  README.md
algorithms/: 2024-06-30-Box-blur.ipynb  2025-06-26-The-HAMT-popcount-trick.md  2025-07-16-Exponentially-segmented-arrays.md  2026-03-03-Fibonacci-hashing.md
compilers/: 2025-05-04-Single-pass-code-generation.md  2025-05-04-Single-pass-codegen.md  2025-05-18-popcnt-and-lzcnt.md  2025-05-25-binaryen.js.md  2025-07-11-v8-pointer-tagging.md
concepts/: 2024-02-07-Pareto-frontier.md  2024-02-17-Data-race.md  2024-04-28-Simplex.md  2024-05-10-Corner-plot.md  2025-01-15-Why-silicon-wafers-are-round.md  2025-07-18-Collective-action-problem.md  2025-12-07-Monoid.md  2026-01-25-Tidy-data.md
emacs/: 2025-02-21-Castlemacs-and-Magit.md
geometry/: 2024-05-23-Curvature-combs.ipynb  2026-01-06-Protomaps-and-pmtiles.md
git/: 2025-03-16-Managing-dotfiles-with-a-bare-Git-repo.md  2025-09-04-Git-exclude.md
gpu/: 2024-09-13-Shader-performance-profiling.md  2024-09-23-Debugging-shaders.md
js/: 2023-11-14-Debug-options.md  2023-11-23-Finding-deoptimizations.md  2024-02-03-Bun-dev-server.md  2024-03-07-esbuild-dev-server.md  2024-11-22-Longer-Node-stack-traces.md  2025-01-18-Lightweight-multitenancy.md  2025-07-27-Property-based-tests-with-fast-check.md  2025-07-28-Better-fast-check-error-messages.md  2025-08-05-Wasm-modules-in-Node.md  (+13 more)
(+38 files in other folders)
